Arreglar icono en boton para despliegue de menu lateral

--- a/src/css/curso.css
+++ b/src/css/curso.css
@@ -19,3 +19,7 @@
 .boton-menu-curso:hover {
     background-color: #575757 !important;
 }
+.btn-toggle-menu {
+    font-size: 18px;
+    padding: 12px 2px;
+}
