Cambios para vista register y ajustes de formularios

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -194,6 +194,9 @@ backdrop-filter: blur(7.6px);
 }
 
 .social-media-item {
+  text-decoration: none;
+  outline: none;
+  color: #000000;
   width: 100%;
   background-color: white;
   display: flex;
